--- a/teamInformation.html
+++ b/teamInformation.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Major League Teams</title>
   </head>
   <body>
-    <div id="teamName"></div>
-    <div id="teamFounded"></div>
-    <div id="teamCity"></div>
+    <button id="MLS">Major League Soccer</button>
+    <p id="teamName"></p>
+    <p id="teamInfo"></p>
+    <p id="teamFounded"></p>
+    <p id="teamVenueName"></p>
+    <p id="teamVenueCapacity"></p>
   </body>
-</html>
+  <script src="Front-End-Project.js"></script>
+  </html>
