--- a/Front-End-Project.html
+++ b/Front-End-Project.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Front-End-Project.css" />
-    <title>Document</title>
+    <title>Major League Soccer Teams</title>
   </head>
   <body>
-    <form action="">
+    <!-- <form action="">
       <label for="teamInput">
         Enter a Team <input 
         type="text" 
@@ -17,15 +17,22 @@
       </label>
       </label>
       <button type="submit">Get Team Info</button>
-    </form>
-    <div id="test"></div>
-    <div id="testTwo"></div>
-    <ul id="myUl"></ul>
-    <ul id="myUlTwo"></ul>
+    </form> -->
+    <!-- <div id="test"></div>
+    <div id="testTwo"></div> -->
+    <!-- <ul id="myUl"></ul>
+    <ul id="myUlTwo"></ul> -->
     <div id="imageDiv"></div>
-    <select name="teamsList" id="teamsList"></select>
-    <img src="https://media-2.api-sports.io/football/teams/1608.png" alt="coach">
-    <img src="https://media-3.api-sports.io/football/venues/1898.png" alt="stadium">
+      <p id="teamName"></p>
+      <p id="teamInfo"></p>
+      <p id="teamFounded"></p>
+      <p id="teamVenueName"></p>
+      <p id="teamVenueCapacity"></p>
+
+    
+    <!-- <select name="teamsList" id="teamsList"></select> -->
+    <!-- <img src="https://media-2.api-sports.io/football/teams/1608.png" alt="coach">
+    <img src="https://media-3.api-sports.io/football/venues/1898.png" alt="stadium"> -->
     <script src="Front-End-Project.js"></script>
   </body>
 </html>
