--- a/Front-End-Project.html
+++ b/Front-End-Project.html
@@ -4,35 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Front-End-Project.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>Major League Soccer Teams</title>
   </head>
   <body>
-    <!-- <form action="">
-      <label for="teamInput">
-        Enter a Team <input 
-        type="text" 
-        placeholder="Enter Team Here" 
-        id="teamInput" 
-        name="teamInput">
-      </label>
-      </label>
-      <button type="submit">Get Team Info</button>
-    </form> -->
-    <!-- <div id="test"></div>
-    <div id="testTwo"></div> -->
-    <!-- <ul id="myUl"></ul>
-    <ul id="myUlTwo"></ul> -->
-    <div id="imageDiv"></div>
-      <p id="teamName"></p>
-      <p id="teamInfo"></p>
-      <p id="teamFounded"></p>
-      <p id="teamVenueName"></p>
-      <p id="teamVenueCapacity"></p>
 
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 id="teamName"></h1>
+    <p class="lead">Jumbo helper text</p>
+    <hr class="my-2">
+    <p>More info</p>
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
+    </p>
+  </div>
+</div>
+<!-- 
+    <div id="nameTeam">Team Name:    
+      <p id="teamName"></p>
+    </div>
     
-    <!-- <select name="teamsList" id="teamsList"></select> -->
-    <!-- <img src="https://media-2.api-sports.io/football/teams/1608.png" alt="coach">
-    <img src="https://media-3.api-sports.io/football/venues/1898.png" alt="stadium"> -->
+    <div id="cityTeam">Team City:
+      <p id="teamInfo"></p>
+    </div>
+
+    <div id="foundedTeam"> Team Founded:
+      <p id="teamFounded"></p>
+    </div>
+
+    <div id="nameVenue"> Venue Name:
+      <p id="teamVenueName"></p>
+    </div>
+
+    <div id="capacityVenue"> Venue Capacity:
+      <p id="teamVenueCapacity"></p>
+    </div> -->
+
+    <div id="imageDiv"></div>
+    
+
+   
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.1.1/js/all.js" integrity="sha384-BtvRZcyfv4r0x/phJt9Y9HhnN5ur1Z+kZbKVgzVBAlQZX4jvAuImlIz+bG7TS00a" crossorigin="anonymous"></script>
     <script src="Front-End-Project.js"></script>
+
   </body>
 </html>
