added MLS logo and soccer balls

--- a/Front-End-Project.html
+++ b/Front-End-Project.html
@@ -12,38 +12,29 @@
   </head>
   <body>
 
-
+<div id="logoAndBall">
+  <img src="./mlssoccerball.webp">
+  <img src="./MLS Logo.webp">
+  <img src="./mlssoccerball.webp">
+</div>
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 id="teamName"></h1>
-    <p class="lead">Jumbo helper text</p>
-    <hr class="my-2">
-    <p>More info</p>
-    <p class="lead">
+    <h1>Team Name</h1>
+      <h1 id="teamName"></h1>
+    <hr>
+    <h2>Team the city plays in</h2>
+      <p id="teamInfo"></p>
+    <h2>The year the team was founded</h2>
+      <p id="teamFounded"></p>
+    <h2>The name of the venue where the team plays at</h2>
+      <p id="teamVenueName"></p>
+    <h2>The capacity of the venue</h2>
+    <p id="teamVenueCapacity"></p>
+    <!-- <p class="lead">
       <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-    </p>
+    </p> -->
   </div>
 </div>
-<!-- 
-    <div id="nameTeam">Team Name:    
-      <p id="teamName"></p>
-    </div>
-    
-    <div id="cityTeam">Team City:
-      <p id="teamInfo"></p>
-    </div>
-
-    <div id="foundedTeam"> Team Founded:
-      <p id="teamFounded"></p>
-    </div>
-
-    <div id="nameVenue"> Venue Name:
-      <p id="teamVenueName"></p>
-    </div>
-
-    <div id="capacityVenue"> Venue Capacity:
-      <p id="teamVenueCapacity"></p>
-    </div> -->
 
     <div id="imageDiv"></div>
     
