--- a/MLSAPI.html
+++ b/MLSAPI.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Front-End-Project.css" />
+    <link rel="stylesheet" href="./MLSAPI.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,38 +13,11 @@
   <body>
 
 
-<!-- 
-<div id="logoAndBall">
-  <img id="leftSoccerBall" src="./mlssoccerball.webp">
-  <img id="shield" src="./MLS Logo.webp">
-  <img id="rightSoccerBall" src="./mlssoccerball.webp">
-</div> -->
-
-<!-- 
-<div class="container">
-  <div class="column">
-    <div class="col text-center">
-      <img src="./mlssoccerball.webp" alt="Image 1">
-    </div>
-    <div class="col text-center">
-      <img src="./MLS Logo.webp" alt="Image 2">
-    </div>
-    <div class="col text-center">
-      <img src="./mlssoccerball.webp" alt="Image 3">
-    </div>
-  </div>
-</div> -->
-
-<!-- <img src="./mlssoccerball.webp" class="rounded float-left" alt="...">
-<img id="logo" src="./MLS Logo.webp" class="rounded mx-auto d-block" alt="..." style="height:200px">
-<img src="./mlssoccerball.webp" class="rounded float-right" alt="..."> -->
-
 
 <div class="d-flex justify-content-between">
   <img id="leftBall" src="./mlssoccerball.webp" style="height: 200px; width: 200px;">
   <img id="logo" src="./MLS Logo.webp" style="height: 200px; width: 200px;">
   <img id="rightBall" src="./mlssoccerball.webp" style="height: 200px; width: 200px;">
-
 </div>
   
 
@@ -52,19 +25,16 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1>Team Name</h1>
-      <h1 id="teamName"></h1>
+      <p id="teamName"></p>
     <hr>
-    <h2>Team the city plays in</h2>
+    <h3>Team the city plays in</h3>
       <p id="teamInfo"></p>
-    <h2>The year the team was founded</h2>
+    <h3>The year the team was founded</h3>
       <p id="teamFounded"></p>
-    <h2>The name of the venue where the team plays at</h2>
+    <h3>The name of the venue where the team plays at</h3>
       <p id="teamVenueName"></p>
-    <h2>The capacity of the venue</h2>
+    <h3>The capacity of the venue</h3>
     <p id="teamVenueCapacity"></p>
-    <!-- <p class="lead">
-      <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-    </p> -->
   </div>
 </div>
 
@@ -77,7 +47,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.1.1/js/all.js" integrity="sha384-BtvRZcyfv4r0x/phJt9Y9HhnN5ur1Z+kZbKVgzVBAlQZX4jvAuImlIz+bG7TS00a" crossorigin="anonymous"></script>
-    <script src="Front-End-Project.js"></script>
+    <script src="./MLSAPI.js"></script>
 
   </body>
 </html>
